* doc/PLATFORMS: 1.3b passes all tests on cygwin
* ltconfig.in: finish_cmds for FreeBSD removed
* depdemo/l3/Makefile.am: install libl3.la into an extra directory

--- a/depdemo/l3/Makefile.am
+++ b/depdemo/l3/Makefile.am
@@ -4,6 +4,8 @@ AUTOMAKE_OPTIONS = no-dependencies foreign
 
 INCLUDES = -I$(top_srcdir)
 
-lib_LTLIBRARIES = libl3.la
+extradir = $(libdir)/extra
+
+extra_LTLIBRARIES = libl3.la
 libl3_la_SOURCES = l3.c l3.h
 libl3_la_LIBADD = $(top_builddir)/l1/libl1.la $(top_builddir)/l2/libl2.la
