* configure.in (AC_PROG_RANLIB):  No longer required as we now use AC_CHECK_TOOL in AC_LIBTOOL_SETUP. * libtool.m4 (AC_PROG_LIBTOOL):  Pass the $build variable to ltconfig. (AC_PROG_RANLIB): replaced with AC_CHECK_TOOL. * ltconfig.in (build): new variable to hold the build triplet which is now checked for unless --no-verify is specified. (--build): new argument to set the build triplet. (ranlib): Prefer ${host_alias}-ranlib[.exe] if $build is different to $host. * doc/libtool.texi (Invoking ltconfig): Document --build option. * NEWS: Note --build option.

--- a/configure.in
+++ b/configure.in
@@ -29,9 +29,8 @@ AC_SUBST(pkgdatadir) dnl automake does not need this, but libtoolize does
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
 
-dnl Use the specified CC, RANLIB, and LD while running ltconfig.
+dnl Use the specified CC and LD while running ltconfig.
 AC_PROG_CC
-AC_PROG_RANLIB
 AM_PROG_LD
 AM_PROG_NM
 AC_PROG_LN_S
